kubernetes/jenkinsHTTPS/jenkins-noTLSingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-leader-ingress
  annotations:
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  # tls:
  # - hosts:
  #   - REPLACEME
  #   secretName: jenkins-leader-tls
  rules:
  - host: REPLACEME
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-leader-svc
          servicePort: 80
